# phinet

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  USAGE.md
.github/workflows/: ci.yml  release.yml
phinet-browser/: README.md  index.html  package.json  sync-sidecar.sh  vite.config.ts
phinet-browser/src/: App.tsx
phinet-browser/src-tauri/: Cargo.toml  tauri.conf.json
phinet-browser/src-tauri/capabilities/: default.json
phinet-browser/src-tauri/src/: daemon.rs  main.rs  vault.rs
phinet-browser/src/features/: Browser.tsx  Com.tsx  Vault.tsx
phinet-browser/src/styles/: globals.css
phinet-bwscanner/: Cargo.toml
phinet-bwscanner/src/: lib.rs  main.rs
phinet-cli/: Cargo.toml
phinet-cli/src/: main.rs
phinet-core/: Cargo.toml
phinet-core/src/: board.rs  cert.rs  circuit.rs  circuit_mgr.rs  circuit_pool.rs  circuit_sched.rs  circuit_timing.rs  client_auth.rs  com.rs  congestion.rs  consensus_fetch.rs  crypto.rs  dht.rs  directory.rs  dos.rs  error.rs  exit_policy.rs  guard_sample.rs  guards.rs  hidden_service.rs  hs_blind.rs  hs_identity.rs  hsdir_ring.rs  lib.rs  node.rs  ntor.rs  onion.rs  padding.rs  path_bias.rs  path_select.rs  pow.rs  relay_desc.rs  rendezvous.rs  replay.rs  session.rs  shared_random.rs  store.rs  stream.rs  timing.rs  transport.rs  (+2 more)
phinet-daemon/: Cargo.toml
phinet-daemon/src/: com_ui.html  main.rs
release/: BUNDLE_README.md  README.md  build-bundle.sh
release/helpers/: create-site.bat  create-site.sh  run-relay.bat  run-relay.sh
