[package]
name        = "phinet-bwscanner"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Bandwidth measurement scanner that produces signed authority votes"

[[bin]]
name = "phinet-bwscanner"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
phinet-core    = { path = "../phinet-core" }
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
hex            = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap           = { version = "=4.4.18", features = ["derive"] }

[dev-dependencies]
tempfile = "=3.10.1"
